5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4173/executions/1644_1053.log
== SUBMITION (2019-04-09 16:27:24) 
-- CODE:
a = input()
if (cervo = true):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.143963
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (cervo = true):
              ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:27:27) 
-- CODE:
a = input()
if (cervo = true):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (cervo = true):
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:27:52) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.221258
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:10) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:29) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:43) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:43) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:43) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:43) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:43) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:44) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:44) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:44) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:44) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:28:44) 
-- CODE:
a = input()
if (a = cervo):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = cervo):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:51) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:52) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:53) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:53) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:53) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:54) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:54) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:54) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:54) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:55) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:55) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:55) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:55) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:56) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:56) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:56) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:56) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:56) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:57) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:57) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:57) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:57) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:57) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:58) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:58) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:58) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:59) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:59) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:59) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:59) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:29:59) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:00) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:00) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:00) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:01) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:01) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:01) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:02) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:02) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:02) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:02) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:02) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:03) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:03) 
-- CODE:
a = input()
if 
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 
      ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:03) 
-- CODE:
a = input()
if 6+
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:04) 
-- CODE:
a = input()
if 6+5
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5
         ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:04) 
-- CODE:
a = input()
if 6+5*/-8595
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:05) 
-- CODE:
a = input()
if 6+5*/-8595.-+
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:05) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:05) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:05) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:06) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:06) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:06) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:07) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+98
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+98
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:07) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:07) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+982198
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+982198
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:07) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:08) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989989
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989989
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:08) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989989
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989989
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:08) 
-- CODE:
a = input()
if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989989
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if 6+5*/-8595.-+9*65-+*65-*85-/*5*82+9821989989
           ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:22) 
-- CODE:
a = input()
if (a ="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a ="cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:30:24) 
-- CODE:
a = input()
if (a ="cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a ="cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:49) 
-- CODE:
a = input("a")
if (a = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:50) 
-- CODE:
a = input("a")
if (a = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:32:52) 
-- CODE:
a = input("a")
if (a = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.144111
-- ERROR:
  File "/home/codebench/codes/1644/1053/main.py", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:52) 
-- CODE:
a = input("a")
if (a = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:53) 
-- CODE:
a = input("a")
if (a = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:54) 
-- CODE:
a = input("a")
if (a = "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- ERROR:
File "XXXX", line 2
    if (a = "cervo"):
          ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:32:58) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:00) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.135224
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:02) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:33:14) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:15) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.193061
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:42) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "<a> nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.194772
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<a> nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:51) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "<a>,nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.137061
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
<a>,nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:33:56) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.208959
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:57) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.141999
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:57) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.204763
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:57) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.241838
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:58) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.247519
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:58) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.272286
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:58) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.309783
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:35:58) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- EXECUTION TIME:
0.234815
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
nao eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:

-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:36:03) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(mensagem)
-- OUTPUT:
cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:37:50) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(a,mensagem)
-- EXECUTION TIME:
0.131792
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-09 16:38:00) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "cervo eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(a,mensagem)
-- OUTPUT:
cervo cervo eh patrono do Harry Potter
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-09 16:38:10) 
-- CODE:
a = input("a")
if (a == "cervo"):
	mensagem = "eh patrono do Harry Potter"
	
else:
   mensagem = "nao eh patrono do Harry Potter"
print(a,mensagem)
-- EXECUTION TIME:
0.180168
-- TEST CASE 1:
---- input:
cervo
---- correct output:
cervo eh patrono do Harry Potter
---- user output:
cervo eh patrono do Harry Potter
-- TEST CASE 2:
---- input:
bode
---- correct output:
bode nao eh patrono do Harry Potter
---- user output:
bode nao eh patrono do Harry Potter
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
